--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="PractyWiz: Bridging the Gap to Greatness. We connect academia with the corporate world, fostering powerful collaborations that drive innovation and create new opportunities for all."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
